--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ToDoApp" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.ToDoApp" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/ColorPrimaryBlue</item>
         <item name="colorPrimaryVariant">@color/ColorPrimaryBlueVariant</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -9,5 +9,10 @@
         <item name="colorSecondaryVariant">@color/white</item>
         <item name="colorOnSecondary">@color/black</item>
 
+    </style>
+    
+    <style name="noActionBar" parent="Theme.ToDoApp">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 </resources>
