--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,13 +3,13 @@
 
     <item
         android:id="@+id/navigation_list"
-        android:icon="drawable/list_icon"
+        android:icon="@drawable/list_icon"
         android:title="List"
         />
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="drawable/settings_icon"
+        android:icon="@drawable/settings_icon"
         android:title="Settings"
         />
 
