--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Splash_bg"
-    tools:context=".Splash">
+    tools:context=".ui.theme.Splash">
 
     <ImageView
         android:id="@+id/splash_logo"
