--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -22,13 +22,15 @@
         android:paddingEnd="24dp"
         android:paddingStart="24dp"
         android:padding="18dp"
+        android:layout_marginStart="2dp"
         android:background="@drawable/red_card_backgroud"
         />
     <androidx.cardview.widget.CardView
         android:id="@+id/drag_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/card_background">
+        android:background="@color/white"
+        app:cardCornerRadius="10dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
